--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -375,6 +375,9 @@
     <ClInclude Include="..\src\TApiDirectx11.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\SoyWin32.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\PopEngineAppBundle.xcconfig">
@@ -961,6 +964,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\TApiDirectx11.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\SoyWin32.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
