--- a/.github/workflows/Build_Windows.yml
+++ b/.github/workflows/Build_Windows.yml
@@ -28,14 +28,14 @@ jobs:
   
       - name: Install Github Packages
         working-directory: ${{ env.project }}.Package/
-        run: npm i
+        run: npm install
         env:
           NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
 
-      - name: Move Package Downloads to Libs
+      - name: Copy package downloads to Libs
         run: |
           mkdir -p Libs
-          mv ${{ env.project }}.Package/node_modules/@newchromantics/* Libs
+          cp ${{ env.project }}.Package/node_modules/@newchromantics/* Libs
           ls -R Libs
 
       - name: Setup Nuget
