Updated build to fetch BuildProductDir: PopEngine_Osx.framework

--- a/.github/workflows/Build_Apple.yml
+++ b/.github/workflows/Build_Apple.yml
@@ -21,6 +21,7 @@ jobs:
           - os: macOS
             type: Osx
             BuildScheme: PopEngine_App
+            BuildProductDir: PopEngine_Osx.framework
 
     steps:
       - uses: actions/checkout@v2
