--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -98,6 +98,7 @@ jobs:
         uses: NewChromantics/PopAction_BuildApple@v1
         with:
           BuildScheme: ${{ matrix.config.BuildScheme }}
+          BuildTargetDir: ${{ matrix.config.BuildTargetDir }}
           project: ${{ env.project }}
           
       - name: Build Linux
