--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -165,6 +165,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         uses: fnkr/github-action-ghr@v1   
         env:
-         #gr: don't compress GHR_COMPRESS: xz
+         GHR_COMPRESS: zip
          GHR_PATH: ${{ env.project }}.Package/
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
