--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -64,7 +64,9 @@ jobs:
   
       - name: Install Github Packages
         working-directory: ${{ env.project }}.Package/
-        run: npm i
+        run: |
+          npm install
+          npm list
         env:
           NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
 
