--- a/Source_Osx/PopEngine.xcconfig
+++ b/Source_Osx/PopEngine.xcconfig
@@ -11,11 +11,18 @@ OTHER_CFLAGS = -Wno-ambiguous-macro
 SOYLIB_PATH = $(SRCROOT)/src/
 OPENCV_PATH = $(SRCROOT)/src/Libs/Opencv
 OPENCV_CONTRIB_PATH = $(SRCROOT)/src/Libs/Opencv_contrib/modules/
-MAGIC_LEAP_PATH = "/Volumes/Code/MagicLeap/mlsdk/v0.21.0/";
+MAGIC_LEAP_PATH = "/Volumes/Code/MagicLeap/mlsdk/v0.21.0/"
+MODULES_PATH = $(PROJECT_DIR)/PopEngine.Package/node_modules/@newchromantics
+OPENVR_PATH = $(PROJECT_DIR)/src/Libs/OpenVr/bin/osx64
+LEAPMOTION_LIB_PATH = $(PROJECT_DIR)/src/Libs/LeapMotion/Leapv2
+OPENVR_LIB_PATH = $(PROJECT_DIR)/src/Libs/OpenVr/lib/osx32
+DYN_LIB_PATH = $(PROJECT_DIR)/src/Libs/dyncall/lib
+//	for some reason osx build just didnt want to find this automatically...
+POPCAMERADEVICE_INCLUDE_PATH = $(MODULES_PATH)/popcameradevice/PopCameraDevice_Osx.framework/Headers/
 
-HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(SOYLIB_PATH) $(OPENCV_PATH)/include $(OPENCV_CONTRIB_PATH) $(MAGIC_LEAP_PATH)/include
-FRAMEWORK_SEARCH_PATHS = $(FRAMEWORK_SEARCH_PATHS) $(PROJECT_DIR)/src/Libs/OpenVr/bin/osx64
-LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(PROJECT_DIR)/src/Libs/LeapMotion/Leapv2 $(PROJECT_DIR)/src/Libs/OpenVr/lib/osx32 $(PROJECT_DIR)/src/Libs/dyncall/lib $(PROJECT_DIR)/src/Libs/OpenVr/bin/osx32
+HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(SOYLIB_PATH) $(OPENCV_PATH)/include $(OPENCV_CONTRIB_PATH) $(MAGIC_LEAP_PATH)/include $(MODULES_PATH)/** $(POPCAMERADEVICE_INCLUDE_PATH)
+FRAMEWORK_SEARCH_PATHS = $(FRAMEWORK_SEARCH_PATHS) $(MODULES_PATH)/** $(OPENVR_PATH)
+LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(LEAPMOTION_LIB_PATH) $(OPENVR_LIB_PATH) $(DYN_LIB_PATH)
 
 
 VERSIONING_SYSTEM = apple-generic
