Fixed ios xcconfig/paths

--- a/Source_Ios/PopEngine_Ios.xcconfig
+++ b/Source_Ios/PopEngine_Ios.xcconfig
@@ -1,20 +1,29 @@
 #include "../src/SoyLib/SoyLib_Ios.xcconfig"
 
-GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) TARGET_IOS
+
+
+GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) TARGET_IOS JSAPI_JSCORE
 //GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) ENABLE_OPENGL
 
-//OTHER_CFLAGS = -Wno-ambiguous-macro
+OTHER_CFLAGS = -Wno-ambiguous-macro
 
 //	including PopH264 framework is including SoyLib/src/xyz.h
 SOYLIB_PATH = $(SRCROOT)/src/
 //OPENCV_PATH = $(SRCROOT)/src/Libs/Opencv
 //OPENCV_CONTRIB_PATH = $(SRCROOT)/src/Libs/Opencv_contrib/modules/
+//MAGIC_LEAP_PATH = "/Volumes/Code/MagicLeap/mlsdk/v0.21.0/"
+MODULES_PATH = $(PROJECT_DIR)/PopEngine.Package/node_modules/@newchromantics
+//OPENVR_PATH = $(PROJECT_DIR)/src/Libs/OpenVr/bin/osx64
+//LEAPMOTION_LIB_PATH = $(PROJECT_DIR)/src/Libs/LeapMotion/Leapv2
+//OPENVR_LIB_PATH = $(PROJECT_DIR)/src/Libs/OpenVr/lib/osx32
+//DYN_LIB_PATH = $(PROJECT_DIR)/src/Libs/dyncall/lib
+//	for some reason osx build just didnt want to find this automatically...
+POPCAMERADEVICE_INCLUDE_PATH = $(MODULES_PATH)/popcameradevice/PopCameraDevice_Ios.framework/Headers/
 
-HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(SOYLIB_PATH) $(DLIB_PATH)/include $(OPENCV_PATH)/include $(OPENCV_CONTRIB_PATH)
+HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(SOYLIB_PATH) $(OPENCV_PATH)/include $(OPENCV_CONTRIB_PATH) $(MAGIC_LEAP_PATH)/include $(MODULES_PATH)/** $(POPCAMERADEVICE_INCLUDE_PATH)
+FRAMEWORK_SEARCH_PATHS = $(FRAMEWORK_SEARCH_PATHS) $(MODULES_PATH)/** $(OPENVR_PATH)
+LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(LEAPMOTION_LIB_PATH) $(OPENVR_LIB_PATH) $(DYN_LIB_PATH)
 //LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(DLIB_PATH)/lib
 
 //VERSIONING_SYSTEM = apple-generic
-
-
-GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) JSAPI_JSCORE
 
