--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
 			"type": "vgdb",
 			"request": "launch",
 			"name": "Debug vgdb",
-			"program": "Build/Linux_Linux/PopEngineTestApp",
-			"args": ["UnitTest/HttpServer"],
+			"program": "Build/PopEngineTestApp",
+			"args": ["/home/graham/Code/PopCap/PopCap"],
 			"cwd": "${workspaceRoot}",
 			"useAbsoluteFilePaths":true,
 			"preLaunchTask": "Build"
@@ -18,8 +18,8 @@
 			"name": "Debug gdb",
 			"type": "gdb",
 			"request": "launch",
-			"target": "Build/Linux_Linux/PopEngineTestApp",
-			"program": "Build/Linux_Linux/PopEngineTestApp",
+			"target": "Build/PopEngineTestApp",
+			"program": "Build/PopEngineTestApp",
 			"cwd": "${workspaceRoot}",
 			"valuesFormatting": "parseText",
 			"printCalls": true,
