--- a/PopEngine.visualstudio/PopEngineLinux.vcxproj
+++ b/PopEngine.visualstudio/PopEngineLinux.vcxproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <ClCompile Include="..\Source_App\PopEngineUnitTestMain.cpp" />
     <ClCompile Include="..\src\JsCoreBind.cpp" />
+    <ClCompile Include="..\src\Json11\json11.cpp" />
     <ClCompile Include="..\src\PopEngine.cpp" />
     <ClCompile Include="..\src\PopMain.cpp" />
     <ClCompile Include="..\src\SoyLib\src\memheap.cpp" />
@@ -131,12 +132,14 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="..\src\TApiHttp.cpp" />
+    <ClCompile Include="..\src\TApiPanopoly.cpp" />
     <ClCompile Include="..\src\TApiSocket.cpp" />
     <ClCompile Include="..\src\TApiWebsocket.cpp" />
     <ClCompile Include="..\src\TBind.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\JsCoreBind.h" />
+    <ClInclude Include="..\src\Json11\json11.hpp" />
     <ClInclude Include="..\src\PopEngine.h" />
     <ClInclude Include="..\src\PopMain.h" />
     <ClInclude Include="..\src\SoyLib\src\Array.hpp" />
@@ -222,7 +225,6 @@
     <ClInclude Include="..\src\SoyLib\src\SoyUniform.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyUnity.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyVector.h" />
-    <ClInclude Include="..\src\SoyLib\src\SoyVideoDevice.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyWave.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyWebSocket.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyWindow.h" />
@@ -235,11 +237,13 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="..\src\TApiHttp.h" />
+    <ClInclude Include="..\src\TApiPanopoly.h" />
     <ClInclude Include="..\src\TApiSocket.h" />
     <ClInclude Include="..\src\TApiWebsocket.h" />
     <ClInclude Include="..\src\TBind.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\PopEngine.Linux\Makefile" />
     <None Include="..\UnitTest\HelloWorld\bootup.js" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
